@@ -1,4 +1,14 @@
-2006-07-13  Tim Dwyer  <Tim.Dwyer@infotech.monash.edu.au>
+2006-07-18  Tim Dwyer  <Tim.Dwyer@infotech.monash.edu.au>
+
+	* src/graphlayout/graphlayout.cpp,
+	  src/conn-avoid-ref.h:
+	  We now use connector spacing to determine the minimum space required
+	  between shape bounding boxes when graph layout with avoid overlap
+	  constraints is applied.  This means that there should always be enough
+	  room for connectors to route between shapes.  Also changed the default
+	  connector spacing to a less extreme 3.
+
+2006-07-17  Tim Dwyer  <Tim.Dwyer@infotech.monash.edu.au>
 
 	* src/libcola/cola.h,
 	  src/libcola/connected_components.cpp,
